@startuml Oklus Database Schema (Triada + Text Templates)

!define TABLE(x) class x << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) <i>x</i>

skinparam linetype ortho
skinparam class {
  BackgroundColor<<Table>> LightYellow
  BorderColor Black
  ArrowColor Black
}

package "Core" {

  TABLE(doctor_profile) {
    PK(id): INTEGER
    --
    doctor_id: TEXT UNIQUE NOT NULL
    name: TEXT NOT NULL
    email: TEXT UNIQUE NOT NULL
    clinic_name: TEXT NOT NULL
    clinic_hours: TEXT
    clinic_slogan: TEXT
    phone: TEXT
    location: TEXT
    app_version: TEXT
    agreed_to_terms: INTEGER DEFAULT 0
    last_sync: TEXT
    created_at: TEXT
    updated_at: TEXT
  }

  TABLE(patients) {
    PK(id): INTEGER
    --
    full_name: TEXT NOT NULL
    doc_id: TEXT UNIQUE NOT NULL
    email: TEXT
    phone: TEXT NOT NULL
    emergency_phone: TEXT
    date_of_birth: TEXT NOT NULL
    anamnesis: TEXT
    allergy_detail: TEXT
    status: TEXT DEFAULT 'active'
    created_at: TEXT
    updated_at: TEXT

    .. Triada (cobros) ..
    debt_opened_at: TEXT
    debt_archived: INTEGER DEFAULT 0
    debt_archived_at: TEXT
    last_contact_at: TEXT
    last_contact_type: TEXT
  }

  TABLE(sessions) {
    PK(id): INTEGER
    --
    FK(patient_id): INTEGER
    date: TEXT NOT NULL

    .. Motivo (snapshot) ..
    reason_type: TEXT
    reason_detail: TEXT

    .. Clínico (snapshots) ..
    diagnosis_text: TEXT
    auto_dx_text: TEXT
    full_dx_text: TEXT
    tooth_dx_json: TEXT
    clinical_notes: TEXT
    signer: TEXT

    .. Financiero (snapshot) ..
    budget: REAL DEFAULT 0
    discount: REAL DEFAULT 0
    payment: REAL DEFAULT 0
    balance: REAL DEFAULT 0
    cumulative_balance: REAL DEFAULT 0
    FK(payment_method_id): INTEGER
    payment_notes: TEXT

    .. Metadata ..
    is_saved: INTEGER DEFAULT 0
    created_at: TEXT
    updated_at: TEXT
  }

  TABLE(session_items) {
    PK(id): INTEGER
    --
    FK(session_id): INTEGER
    name: TEXT NOT NULL
    unit_price: REAL NOT NULL
    quantity: INTEGER DEFAULT 1
    subtotal: REAL NOT NULL
    is_active: INTEGER DEFAULT 1
    tooth_number: TEXT
    procedure_notes: TEXT
    FK(procedure_template_id): INTEGER
    sort_order: INTEGER DEFAULT 0
    created_at: TEXT
  }

  TABLE(attachments) {
    PK(id): INTEGER
    --
    FK(patient_id): INTEGER
    FK(session_id): INTEGER
    kind: TEXT
    filename: TEXT NOT NULL
    mime_type: TEXT NOT NULL
    size_bytes: INTEGER NOT NULL
    storage_key: TEXT NOT NULL
    note: TEXT
    created_at: TEXT
  }

  TABLE(text_templates) {
    PK(id): INTEGER
    --
    kind: TEXT NOT NULL
    title: TEXT NOT NULL
    body: TEXT NOT NULL
    tags: TEXT
    source: TEXT DEFAULT 'system'
    is_favorite: INTEGER DEFAULT 0
    active: INTEGER DEFAULT 1
    sort_order: INTEGER DEFAULT 0
    created_at: TEXT
    updated_at: TEXT
  }
}

package "Catalogs" {

  TABLE(procedure_templates) {
    PK(id): INTEGER
    --
    name: TEXT UNIQUE NOT NULL
    default_price: REAL DEFAULT 0
    active: INTEGER DEFAULT 1
    created_at: TEXT
    updated_at: TEXT
  }

  TABLE(signers) {
    PK(id): INTEGER
    --
    name: TEXT UNIQUE NOT NULL
    active: INTEGER DEFAULT 1
    created_at: TEXT
    updated_at: TEXT
  }

  TABLE(diagnosis_options) {
    PK(id): INTEGER
    --
    label: TEXT UNIQUE NOT NULL
    color: TEXT DEFAULT 'info'
    active: INTEGER DEFAULT 1
    sort_order: INTEGER DEFAULT 0
    created_at: TEXT
    updated_at: TEXT
  }

  TABLE(reason_types) {
    PK(id): INTEGER
    --
    name: TEXT UNIQUE NOT NULL
    active: INTEGER DEFAULT 1
    sort_order: INTEGER DEFAULT 0
    created_at: TEXT
    updated_at: TEXT
  }

  TABLE(payment_methods) {
    PK(id): INTEGER
    --
    name: TEXT UNIQUE NOT NULL
    active: INTEGER DEFAULT 1
    sort_order: INTEGER DEFAULT 0
    created_at: TEXT
    updated_at: TEXT
  }

  TABLE(user_settings) {
    PK(id): INTEGER
    --
    key: TEXT UNIQUE NOT NULL
    value: TEXT NOT NULL
    category: TEXT NOT NULL
    updated_at: TEXT
  }
}

package "Telemetry" {

  TABLE(telemetry_events) {
    PK(id): INTEGER
    --
    FK(doctor_id): TEXT
    event_type: TEXT NOT NULL
    event_data: TEXT NOT NULL
    timestamp: TEXT
    sent: INTEGER DEFAULT 0
    sent_at: TEXT
  }

  TABLE(error_logs) {
    PK(id): INTEGER
    --
    doctor_id: TEXT NOT NULL
    error_message: TEXT NOT NULL
    stack_trace: TEXT
    app_version: TEXT
    timestamp: TEXT
    sent: INTEGER DEFAULT 0
    sent_at: TEXT
  }

  TABLE(sync_queue) {
    PK(id): INTEGER
    --
    table_name: TEXT NOT NULL
    record_id: INTEGER NOT NULL
    operation: TEXT NOT NULL
    data: TEXT NOT NULL
    timestamp: TEXT
    sent: INTEGER DEFAULT 0
    sent_at: TEXT
  }
}

patients "1" --> "0..*" sessions : tiene
patients "1" --> "0..*" attachments : tiene
sessions "1" --> "0..*" session_items : contiene
sessions "1" --> "0..*" attachments : puede tener
sessions "0..*" --> "0..1" payment_methods : usa
session_items "0..*" --> "0..1" procedure_templates : basado en
telemetry_events "0..*" --> "1" doctor_profile : pertenece a

note right of sessions
  SNAPSHOTS INMUTABLES:
  - reason_type, signer son TEXT
  - diagnosis_text/notes son texto final guardado
  - items: name/unit_price snapshots
end note

note right of patients
  TRIADA (operacional):
  - debt_opened_at para mora (usa session.date)
  - last_contact_at para estado de cuenta (sin WhatsApp API)
  - debt_archived para limpiar cartera sin borrar historial
end note

note right of text_templates
  Plantillas:
  - source=system | user
  - kind define dónde se inserta
  - NO FK con sessions (solo copia texto)
end note

@enduml
